# MeshFlipper

./: .gitignore  CMakeLists.txt  DevDocs.md  ReadMe.md  prj.conf
boards/: rpi_pico-pinctrl-common.dtsi  rpi_pico.conf  rpi_pico.overlay
include/: cb_args.h
include/comms/: protobuf_handler.h  uart_comms.h
include/communication/: manage_pb.h  ring_buffer.h  uart_comms.h
include/config/: common.h
include/display/: weact_epd154.h
include/hardware/: button.h  button_hal.h  display_hal.h  display_hal_weact.h  hardware.h  uart_hal.h
include/middleware/: display_driver.h
include/models/: mesh_message.h  mesh_node.h  message.h  node.h  ring_buffer.h
include/tasks/: message_processor.h
include/ui/: buttons.h  display_ui.h  display_ui_internal.h  on_screen_keyb.h  screen_ui.h  ui_button_handler.h
src/: all_source.txt  main.c
src/comms/: protobuf_handler.c  uart_comms.c
src/communication/: manage_pb.c  ring_buffer.c  uart_comms.c
src/display/: weact_epd154.c
src/hardware/: button.c  button_hal.c  display_hal.c  display_hal_weact.c  uart_hal.c
src/middleware/: display_driver.c
src/models/: mesh_message.c  mesh_node.c  message.c  node.c  ring_buffer.c
src/tasks/: message_processor.c
src/ui/: buttons.c  display_ui.c  display_ui_actions.c  display_ui_core.c  display_ui_keyboard.c  on_screen_keyb.c  screen_ui.c  ui_button_handler.c
